fixed gray ooze damage and some dashes

--- a/the_forbidden_temple_of_pflarr.tex
+++ b/the_forbidden_temple_of_pflarr.tex
@@ -145,7 +145,7 @@ Now, something dark has awakened there. Crawling through its dusty halls the evi
 
 \subsection{In Ages Past}
 
-Long ago, at the highest point of the Hutaakan civilization, one of their high priests fell under the corrupting influence of Thanatos --- the most hated enemy of Pflarr, immortal patron of the jackal-headed Hutaakans. The corruption was noticed in time. Hutaakan clergy captured the heretic and, lest Thanatos' servant rise as his undead minion, sealed him alive in a stone sarcophagus hidden in his own temple.
+Long ago, at the highest point of the Hutaakan civilization, one of their high priests fell under the corrupting influence of Thanatos \dash\ the most hated enemy of Pflarr, immortal patron of the jackal-headed Hutaakans. The corruption was noticed in time. Hutaakan clergy captured the heretic and, lest Thanatos' servant rise as his undead minion, sealed him alive in a stone sarcophagus hidden in his own temple.
 
 \tab The story of the forbidden temple was lost during the decline of the Hutaakan culture. Not even the priests of Pflarr now remember the reason why the temple was abandoned.
 
@@ -159,7 +159,7 @@ Long ago, at the highest point of the Hutaakan civilization, one of their high p
 
 \section{Rumors for the Player Characters}
 
-It is said, that the forested mountains to the north-east of the central lake hide an ancient temple of Pflarr --- one of the oldest structures in the valley. It was abandoned so long ago that even the Hutaakans themselves don't remember the reason why.
+It is said, that the forested mountains to the north-east of the central lake hide an ancient temple of Pflarr \dash\ one of the oldest structures in the valley. It was abandoned so long ago that even the Hutaakans themselves don't remember the reason why.
 
 \tab Each character also knows a single random rumor about the temple:
 
@@ -283,11 +283,11 @@ In the wilderness, check for a random encounter once per day and twice per night
 
 \begin{itemize}[leftmargin=*]
 \item
-All lesser undead are of Traldar origin, warriors turned into elder ghouls, vocals --- into agarats, and others --- into ghouls.
+All lesser undead are of Traldar origin, warriors turned into elder ghouls, vocals \dash\ into agarats, and others \dash\ into ghouls.
 \item
 The whole interior (from \hyperlink{room5}{\textbf{room 5}} and on) is completely \textbf{devoid of light}.
 \item
-\textbf{Halls} are 30' high, \textbf{chambers} --- 20', \textbf{corridors} and \textbf{doorways} --- 15' high.
+\textbf{Halls} are 30' high, \textbf{chambers} \dash\ 20', \textbf{corridors} and \textbf{doorways} \dash\ 15' high.
 \item \textbf{Living Statues} stood dormant for millennia and were reanimated just recently by the high priest's will.
 \item No random encounters happen in the temple, but ghouls from the nearby rooms can hear loud noises and come out to investigate. At night, the high priest comes out, accompanied by his servants (see \hyperlink{room14}{\textbf{room 14}}), and travels to \hyperlink{room9}{\textbf{room 9}} to animate new undead servants if the dead bodies are available.
 \end{itemize}
@@ -388,7 +388,7 @@ The chamber is empty except for shards of bones scattered over the floor and gna
 
 \tab Loud noises in neighboring rooms (\hyperlink{room5}{\textbf{5}}, \hyperlink{room6}{\textbf{6}}, \hyperlink{room9}{\textbf{9}}) have a 2-in-6 chance (check each combat round) of attracting the ghouls to investigate the disturbance.
 
-\tab A defective \hyperlink{statue}{\textbf{rock/ooze statue}} is suspended by ropes over the entrance to the corridor leading to \hyperlink{room9}{\textbf{room 9}} --- see the \hyperlink{statue-trap}{\textbf{Statue Trap}} section below.
+\tab A defective \hyperlink{statue}{\textbf{rock/ooze statue}} is suspended by ropes over the entrance to the corridor leading to \hyperlink{room9}{\textbf{room 9}} \dash\ see the \hyperlink{statue-trap}{\textbf{Statue Trap}} section below.
 
 \begin{textbox}
 	\subparagraph{8 ghouls:} AC~6; HD~2*; hp 2×14, 2×9, 12, 10, 2×4; MV~90' (30'); \#AT~2~claws/ 1~bite; D~1d3/1d3/1d3 + paralysis; Save~F2; ML~9; Int~3; AL~C; XP~25; THAC0~18.
@@ -404,7 +404,7 @@ The chamber is empty except for shards of bones scattered over the floor and gna
 
 \tab Loud noises in \hyperlink{room8}{\textbf{room 8}} have a 2-in-6 chance (check each combat round) of attracting the ghouls to investigate the disturbance.
 
-\tab A defective \hyperlink{statue}{\textbf{rock/ooze statue}} is suspended by ropes over the entrance to the corridor leading to \hyperlink{room9}{\textbf{room 8}} --- see the \hyperlink{statue-trap}{\textbf{Statue Trap}} section below.
+\tab A defective \hyperlink{statue}{\textbf{rock/ooze statue}} is suspended by ropes over the entrance to the corridor leading to \hyperlink{room9}{\textbf{room 8}} \dash\ see the \hyperlink{statue-trap}{\textbf{Statue Trap}} section below.
 
 \skipline
 \paragraph{Treasure}
@@ -564,10 +564,10 @@ Behind the heavy curtain, the \hyperlink{mummy}{\textbf{Mummy of the High Priest
 
 \subparagraph{References to Rule Books:}
 The following abbreviations are used when referring to specific pages in the rule books:
-\textbf{BD} --- Basic Dungeon Masters Book,
-\textbf{CC} --- Creature Catalogue,
-\textbf{EX} --- Expert Rule Book,
-\textbf{RC} --- Rules Cyclopedia.
+\textbf{BD} \dash\ Basic Dungeon Masters Book,
+\textbf{CC} \dash\ Creature Catalogue,
+\textbf{EX} \dash\ Expert Rule Book,
+\textbf{RC} \dash\ Rules Cyclopedia.
 
 \newcommand{\setAnimalTabPositions}{%
 	\setCustomTabPositions{%
@@ -817,7 +817,7 @@ This seeping horror looks like wet stone \dash\ usually a patch about 8' in diam
 	\item
 	Cannot be harmed by cold or fire, but can be harmed by weapons and lightning.
 	\item
-	Acid does 2d4 damage if it touches bare skin and will dissolve and destroy normal armor or weapons in 1 round, and magical items in 1 turn.
+	Acid does 2d8 damage if it touches bare skin and will dissolve and destroy normal armor or weapons in 1 round, and magical items in 1 turn.
 	\item
 	After the first hit, the ooze sticks to its victim, automatically destroying any normal armor and continuing to inflict 2d8 damage per round.
 \end{itemize}
@@ -1005,11 +1005,11 @@ A large flat and translucent amoeba that shimmers with a variety of pale colors.
 	In addition to damage, the touch also causes \textbf{disease} (no save). This hideous rotting affliction prevents all magical healing and slows normal healing to 10\% of the normal rate. The disease lasts until magically cured.
 	\item
 	\textbf{Staff of Harming:} clerics only, 13 charges left:\\
-		1 charge ~--- 1d6+1 damage in melee (normal attack roll, no save),\\
-		2 charges --- cause blindness,\\
-		2 charges --- cause disease,\\
-		3 charges --- cause serious wounds,\\
-		4 charges --- create poison.\\
+		1 charge ~\dash\ 1d6+1 damage in melee (normal attack roll, no save),\\
+		2 charges \dash\ cause blindness,\\
+		2 charges \dash\ cause disease,\\
+		3 charges \dash\ cause serious wounds,\\
+		4 charges \dash\ create poison.\\
 \end{itemize}
 
 \vfill
