various minor fixes for v1.1.1

--- a/the_forbidden_temple_of_pflarr.tex
+++ b/the_forbidden_temple_of_pflarr.tex
@@ -17,8 +17,8 @@
 \def\license{%
 	``\title''\\is unofficial Fan Content permitted under the Fan Content Policy. Not~approved/endorsed by Wizards. Portions of the materials used are property of Wizards of the Coast. ©Wizards of the Coast LLC.}
 \def\licenselink{https://company.wizards.com/en/legal/fancontentpolicy}
-\def\modVer{1.1}
-\def\modDate{2024-10-23}
+\def\modVer{1.1.1}
+\def\modDate{2024-10-30}
 
 \hypersetup{%
 	pdfborderstyle={/S/U/W 1},% underlined hyperlinks
@@ -288,8 +288,12 @@ All lesser undead are of Traldar origin, warriors turned into elder ghouls, voca
 The whole interior (from \hyperlink{room5}{\textbf{room 5}} and on) is completely \textbf{devoid of light}.
 \item
 \textbf{Halls} are 30' high, \textbf{chambers} \dash\ 20', \textbf{corridors} and \textbf{doorways} \dash\ 15' high.
-\item \textbf{Living Statues} stood dormant for millennia and were reanimated just recently by the high priest's will.
-\item No random encounters happen in the temple, but ghouls from the nearby rooms can hear loud noises and come out to investigate. At night, the high priest comes out, accompanied by his servants (see \hyperlink{room14}{\textbf{room 14}}), and travels to \hyperlink{room9}{\textbf{room 9}} to animate new undead servants if the dead bodies are available.
+\item
+\textbf{Living Statues} stood dormant for millennia and were reanimated just recently by the high priest's will.
+\item
+No random encounters happen in the temple, but ghouls from the nearby rooms can hear loud noises and come out to investigate.
+\item
+At night, the high priest comes out, accompanied by his servants (see \hyperlink{room14}{\textbf{room 14}}), and travels to \hyperlink{room9}{\textbf{room 9}} to animate new undead servants if the dead bodies are available.
 \end{itemize}
 
 
@@ -336,7 +340,7 @@ Stucco reliefs that were once covering the walls now lie broken and smashed on t
 
 \tab 6 square 10'-wide \textbf{columns} adorned with masterful reliefs of jackal-headed figures engaged in various forms of arts and crafts.
 
-\tab 6 \hyperlink{statue}{\textbf{jade living statues}}, 10' each one standing near a column, will attack any intruders on sight.
+\tab 6 \hyperlink{statue}{\textbf{jade living statues}} 10' tall, each one standing near a column, will attack any intruders on sight.
 
 \tab Loud noises have a 2-in-6 chance (check each combat round) of attracting the inhabitants of \hyperlink{room8}{\textbf{room 8}}.
 
@@ -356,7 +360,9 @@ Stucco reliefs that were once covering the walls now lie broken and smashed on t
 
 \tab Loud noises have a 2-in-6 chance (check each combat round) of attracting the inhabitants of \hyperlink{room8}{\textbf{room 8}}.
 
-\tab The door to \hyperlink{room7}{\textbf{room 7}} stands open. A~\textbf{secret door} leading to \hyperlink{room13}{\textbf{room 13}} is hidden as a part of the bas-relief on the wall opposing the opened door.
+\tab The door to \hyperlink{room7}{\textbf{room 7}} stands open.
+
+\tab A~\textbf{secret door} leading to \hyperlink{room13}{\textbf{room 13}} is hidden as a part of the bas-relief on the wall opposing the opened door.
 
 \begin{textbox}
 	\subparagraph{3 rock/ooze living statues:} AC~4; HD~5**; hp 23 each; MV~60' (20'); \#AT~2~squirts of gray ooze; Save~Dw5; ML~11; Int~7; AL~N; XP~425; THAC0~15.
@@ -404,7 +410,7 @@ The chamber is empty except for shards of bones scattered over the floor and gna
 
 \tab Loud noises in \hyperlink{room8}{\textbf{room 8}} have a 2-in-6 chance (check each combat round) of attracting the ghouls to investigate the disturbance.
 
-\tab A defective \hyperlink{statue}{\textbf{rock/ooze statue}} is suspended by ropes over the entrance to the corridor leading to \hyperlink{room9}{\textbf{room 8}} \dash\ see the \hyperlink{statue-trap}{\textbf{Statue Trap}} section below.
+\tab A defective \hyperlink{statue}{\textbf{rock/ooze statue}} is suspended by ropes over the entrance to the corridor leading to \hyperlink{room8}{\textbf{room 8}} \dash\ see the \hyperlink{statue-trap}{\textbf{Statue Trap}} section below.
 
 \skipline
 \paragraph{Treasure}
@@ -422,12 +428,12 @@ The chamber is empty except for shards of bones scattered over the floor and gna
 	\subparagraph{1 elder ghoul:} AC~5; HD~5**; hp 25; MV~90' (30'); \#AT~2~claws/1~bite + special; D~1d4/1d4/1d6 + paralysis; Save~F4; ML~11; Int~12; AL~C; XP~175; THAC0~15.
 \end{textbox}
 
-	\tab Every night the high priest comes here to animate new undead servants:
-	
-	\ulf\textbf{d6}\tab\tab\textbf{Undead Reinforcements}\\
-	~1\tab\tab	1 \hyperlink{elder-ghoul}{\textbf{elder ghoul}}\\
-	2-3\tab\tab	1 \hyperlink{agarat}{\textbf{agarat}} and 1 \hyperlink{ghoul}{\textbf{ghoul}}\\
-	\ulf4-6\tab\tab	5 \hyperlink{ghoul}{\textbf{ghouls}}
+\tab Every night the high priest comes here to animate new undead servants:
+
+\ulf\textbf{d6}\tab\tab\textbf{Undead Reinforcements}\\
+~1\tab\tab	1 \hyperlink{elder-ghoul}{\textbf{elder ghoul}}\\
+2-3\tab\tab	1 \hyperlink{agarat}{\textbf{agarat}} and 1 \hyperlink{ghoul}{\textbf{ghoul}}\\
+\ulf4-6\tab\tab	5 \hyperlink{ghoul}{\textbf{ghouls}}
 
 
 
@@ -785,11 +791,11 @@ All are immune to \textbf{sleep}, \textbf{charm}, and \textbf{hold} spells.
 	\item
 	Can conceal itself by merging into rock surfaces.
 	\item
-	Filled with \hyperlink{gray-ooze}{gray ooze} and can squirt two \hyperlink{gray-ooze-blob}{blobs} per round from fingertips.
+	Filled with \hyperlink{gray-ooze}{\textbf{gray ooze}} and can squirt two \hyperlink{gray-ooze-blob}{\textbf{blobs}} per round from fingertips.
 \end{itemize}
 }
 \vspace*{-\baselineskip}
-\paragraph{Jade Living Statue}
+\paragraph{Jade Living Statue*}
 \tabpar[4]{%
 7'-tall; when~destroyed, crumble to worthless powder.
 \begin{itemize}[leftmargin=*,label=\itshape\textbullet]
@@ -817,9 +823,9 @@ This seeping horror looks like wet stone \dash\ usually a patch about 8' in diam
 	\item
 	Cannot be harmed by cold or fire, but can be harmed by weapons and lightning.
 	\item
-	Acid does 2d8 damage if it touches bare skin and will dissolve and destroy normal armor or weapons in 1 round, and magical items in 1 turn.
+	Acid does \textbf{2d8 damage} if it touches bare skin and will dissolve and destroy normal armor or weapons in 1 round, and magical items in 1 turn.
 	\item
-	After the first hit, the ooze sticks to its victim, automatically destroying any normal armor and continuing to inflict 2d8 damage per round.
+	After the first hit, the ooze sticks to its victim, automatically destroying any normal armor and continuing to inflict \textbf{2d8 damage per round}.
 \end{itemize}
 
 \skipline
@@ -833,9 +839,9 @@ This seeping horror looks like wet stone \dash\ usually a patch about 8' in diam
 	\item
 	Cannot be harmed by cold or fire, but can be harmed by weapons and lightning.
 	\item
-	Acid does 2d4 damage if it touches bare skin and will dissolve and destroy normal armor or weapons in 2 rounds, and magical items in 2 turns.
+	Acid does \textbf{2d4 damage} if it touches bare skin and will dissolve and destroy normal armor or weapons in 2 rounds, and magical items in 2 turns.
 	\item
-	After the first hit, the ooze sticks to its victim, automatically destroying any normal armor and continuing to inflict 2d4 damage per round.
+	After the first hit, the ooze sticks to its victim, automatically destroying any normal armor and continuing to inflict \textbf{2d4 damage per round}.
 \end{itemize}
 
 \vfill
@@ -872,15 +878,16 @@ This seeping horror looks like wet stone \dash\ usually a patch about 8' in diam
 
 All undead are not affected by special attacks that affect only living creatures (such as poison) or by spells that affect the mind.
 
+\skipline
 
 \hypertarget{agarat}{}
 \paragraph{Agarat*}
 \rightbox[\aparskip]{(CC83)}
 \headerUndead
 4\tab 4+3*\tab 90'(30')\tab 2 claws/1 bite\tab 1d3/1d3/1d3\tab F5\tab 11\tab 4\tab C\tab 200\tab 15
-\\\tabn{4}+~scream
+\\Can only be distinguished from\tabn{1}+~scream
 
-Can only be distinguished from ghouls by their blood-curdling screams and their inability to paralyze victims.
+ghouls by their blood-curdling screams and their inability to paralyze victims.
 \begin{itemize}[leftmargin=*,label=\itshape\textbullet]
 \item
 Can only be hit by silver or magical weapons.
@@ -899,7 +906,7 @@ Immune to \textbf{sleep}, \textbf{charm}, and \textbf{hold} spells.
 \rightbox[\aparskip]{(CC95)}
 \headerUndead
 5\tab 5**\tab 90'(30')\tab 2 claws/1 bite\tab 1d4/1d4/1d6\tab F4\tab 11\tab 12\tab C\tab 175\tab 15
-\\\tabn{3}+~special\tab +~special
+\\\tabn{3}+~special\tab +~paralysis
 
 %A more powerful form of ghoul.
 \begin{itemize}[leftmargin=*,label=\itshape\textbullet]
@@ -908,7 +915,7 @@ Immune to \textbf{sleep}, \textbf{charm}, and \textbf{hold} spells.
 \item
 \textbf{Turned} as wraiths.
 \item
-When attacked, a sphere of eerie green light forms around its head, expanding at a rate of 5'/round ut to a maximum radius of 25'. Anyone in the area must Save vs. Spells or suffer a chilling weakness and a --2 penalty to their hit and damage rolls.
+When attacked, a sphere of eerie green light forms around its head, expanding at a rate of 5'/round ut to a maximum radius of 25'. Anyone in the area must Save vs. Spells (adjusted by Wisdom) or suffer a chilling weakness and a~--2~penalty to their hit and damage rolls.
 \item
 Any hit from an elder ghoul will \textbf{paralyze} any creature of ogre-size or smaller (except elves) for 2d4 turns unless Save vs. Paralysis is made successfully. Once an opponent is paralyzed, the ghoul will target another opponent.
 \end{itemize}
