--- a/the_forbidden_temple_of_pflarr.tex
+++ b/the_forbidden_temple_of_pflarr.tex
@@ -17,8 +17,8 @@
 \def\license{%
 	``\title''\\is unofficial Fan Content permitted under the Fan Content Policy. Not~approved/endorsed by Wizards. Portions of the materials used are property of Wizards of the Coast. ©Wizards of the Coast LLC.}
 \def\licenselink{https://company.wizards.com/en/legal/fancontentpolicy}
-\def\modVer{1.1.1}
-\def\modDate{2024-10-30}
+\def\modVer{1.1.2}
+\def\modDate{2025-06-26}
 
 \hypersetup{%
 	pdfborderstyle={/S/U/W 1},% underlined hyperlinks
@@ -112,7 +112,7 @@ v\modVer{}~(\modDate{})
 	\centering
 	The information in this booklet is for DM's eyes only!
 	
-	The module also contains spoilers for \emph{B10 Night's Dark Terror}\\since it is set in the aftermath of the events described there.
+	The module also contains spoilers for \emph{B10: Night's Dark Terror}\\since it is set in the aftermath of the events described there.
 \end{uheaderbox}
 \end{tabbox}
 \end{minipage}
@@ -132,9 +132,9 @@ v\modVer{}~(\modDate{})
 \break
 \vspace*{1.1\baselineskip}
 
-Hidden deep in the mountains of Hutaaka Valley, the ancient temple of Pflarr stood centuries undisturbed.
+Hidden deep in the mountains of Hutaaka Valley, the ancient temple of Pflarr stood undisturbed for centuries.
 
-Now, something dark has awakened there. Crawling through its dusty halls the evil force tries to escape outside.
+Now, something dark has awakened there. The evil force within crawls through the dusty halls, trying to make its escape.
 
 \vfill
 
@@ -145,13 +145,13 @@ Now, something dark has awakened there. Crawling through its dusty halls the evi
 
 \subsection{In Ages Past}
 
-Long ago, at the highest point of the Hutaakan civilization, one of their high priests fell under the corrupting influence of Thanatos \dash\ the most hated enemy of Pflarr, immortal patron of the jackal-headed Hutaakans. The corruption was noticed in time. Hutaakan clergy captured the heretic and, lest Thanatos' servant rise as his undead minion, sealed him alive in a stone sarcophagus hidden in his own temple.
+Long ago, at the highest point of the Hutaakan civilization, a high priest fell under the corrupting influence of Thanatos\dash the most hated enemy of Pflarr, immortal patron of the jackal-headed Hutaakans. The corruption was noticed in time. Hutaakan clergy captured the heretic and, lest Thanatos's servant rise as his undead minion, sealed him alive in a stone sarcophagus hidden in his own temple.
 
-\tab The story of the forbidden temple was lost during the decline of the Hutaakan culture. Not even the priests of Pflarr now remember the reason why the temple was abandoned.
+\tab The story of the forbidden temple was lost during the decline of the Hutaakan culture. The reason the temple was abandoned is long forgotten, even by the priests of Pflarr.
 
 \subsection{Current Times}
 
-\tab The tribe with which the characters had allied during the events of \emph{B10 Night's Dark Terror} now fully controls the western half of the Lost Valley, but Eastern Hutaaka is still uninhabited since neither Hutaakans nor Traldar have the numbers to resettle here. The other tribe is scattered and nearly extinct by this point.
+\tab The tribe that the characters allied with during the events of \emph{B10: Night's Dark Terror} now fully controls the western half of the Lost Valley, but Eastern Hutaaka is still uninhabited since neither Hutaakans nor Traldar have the numbers to resettle there. The other tribe is scattered and nearly extinct by this point.
 
 \tab Not long ago, a lone group of Traldar discovered the temple and entered it, unknowingly freeing the high priest, who immediately rewarded them with a quick and painful death. Still confined by the holy walls of the temple, the high priest now sends his ghouls to bring him new victims, while attempting to perform a dark ritual that will set him free.
 
@@ -159,20 +159,20 @@ Long ago, at the highest point of the Hutaakan civilization, one of their high p
 
 \section{Rumors for the Player Characters}
 
-It is said, that the forested mountains to the north-east of the central lake hide an ancient temple of Pflarr \dash\ one of the oldest structures in the valley. It was abandoned so long ago that even the Hutaakans themselves don't remember the reason why.
+It is said that the forested mountains to the northeast of the central lake hide an ancient temple of Pflarr\dash one of the oldest structures in the valley. It was abandoned so long ago that even the Hutaakans themselves don't remember the reason why.
 
 \tab Each character also knows a single random rumor about the temple:
 
 \paragraph{d10 Rumors}
 \begin{enumerate}
 	\item Forests near the northern road are teeming with the undead. \textbf{(True)}
-	\item There is an ancient secluded colony of Hutaakans living in the northern mountains. \textbf{(False)}
+	\item An ancient secluded colony of Hutaakans lives in the northern mountains. \textbf{(False)}
 	\item The temple was nearly destroyed in a large earthquake hundreds of years ago. \textbf{(False)}
 	\item You must approach the temple on all fours, lest the monuments of Pflarr at the entrance smite you dead right there. \textbf{(False)}
 	\item Statues of Hutaakan priests can come alive to smite intruders. \textbf{(True)}
 	\item The temple is full of precious objects of the ancient Hutaakan culture. \textbf{(True)}
 	\item If you listen carefully, you can hear ancient mummified priests whispering prayers to Pflarr. \textbf{(False)}
-	\item Anyone staying in the temple for a night, turns into a jackal-headed monstrosity. \textbf{(False)}
+	\item Anyone staying in the temple for a~night turns into a jackal-headed monstrosity. \textbf{(False)}
 	\item The temple is said to be carved right into the cliff face. \textbf{(True)}
 	\item The temple is full of deadly traps and hidden passages. \textbf{(True)}
 \end{enumerate}
@@ -191,7 +191,7 @@ Former Hutaakan slaves, they are cruel and embittered people, often aggressive a
 
 \paragraph{Villages}
 
-A dozen of single-storey stone domiciles of a few rooms each. Some are free-standing, and others are built into the rock.
+A dozen single-story stone domiciles of a few rooms each. Some are free- standing, while others are built into the rock.
 
 \paragraph{Other Structures}
 Stone shrines of Pflarr, fountains, and decorated arches are scattered throughout the valley. Since the time of the Traldar uprising, nearly all decorations have been smashed and erased, leaving almost no trace of the Hutaakan craftsmanship.
@@ -283,7 +283,7 @@ In the wilderness, check for a random encounter once per day and twice per night
 
 \begin{itemize}[leftmargin=*]
 \item
-All lesser undead are of Traldar origin, warriors turned into elder ghouls, vocals \dash\ into agarats, and others \dash\ into ghouls.
+All lesser undead are of Traldar origin, warriors turned into elder ghouls, vocals into agarats, and others into ghouls.
 \item
 The whole interior (from \hyperlink{room5}{\textbf{room 5}} and on) is completely \textbf{devoid of light}.
 \item
@@ -300,7 +300,7 @@ At night, the high priest comes out, accompanied by his servants (see \hyperlink
 \hypertarget{room1}{}
 \section{1. Entrance}
 
-A pair of colossal jackal-headed sculptures of Pflarr sit on both sides of an open dark entrance. Just like the whole temple, they are sculpted out of the rock face.
+A pair of colossal jackal-headed sculptures of Pflarr sit on either side of an open dark entrance. They are sculpted out of the rock face, like the entire temple.
 
 
 \hypertarget{room2}{}
@@ -338,9 +338,9 @@ An ancient star-shaped holy symbol carved on the floor in front of the entrance 
 
 Stucco reliefs that were once covering the walls now lie broken and smashed on the floor. It would take a great amount of time and effort to reassemble some of them back together. If it is done, the characters will see scenes depicting the Hutaakan creation myth: Pflarr sculpting his jackal-headed Hutaakan children out of dust and gifting them with the breath of life.
 
-\tab 6 square 10'-wide \textbf{columns} adorned with masterful reliefs of jackal-headed figures engaged in various forms of arts and crafts.
+\tab Six square 10'-wide \textbf{columns} adorned with masterful reliefs of jackal-headed figures engaged in various forms of arts and crafts.
 
-\tab 6 \hyperlink{statue}{\textbf{jade living statues}} 10' tall, each one standing near a column, will attack any intruders on sight.
+\tab Six \hyperlink{statue}{\textbf{jade living statues}} 10' tall, each one standing near a column, will attack any intruders on sight.
 
 \tab Loud noises have a 2-in-6 chance (check each combat round) of attracting the inhabitants of \hyperlink{room8}{\textbf{room 8}}.
 
@@ -374,7 +374,7 @@ Stucco reliefs that were once covering the walls now lie broken and smashed on t
 \hypertarget{room7}{}
 \section{7. Defiled Burial Chamber}
 
-Three open sarcophagi lie open, their lids scattered on the floor. Half-smashed reliefs on the walls tell a story of Hutaakan clerics defeating the corrupted high priest and burying him alive in this sacred place to stop the spread of evil.
+Three sarcophagi lie open, their lids scattered on the floor. Half-smashed reliefs on the walls tell a story of Hutaakan clerics defeating the corrupted high priest and burying him alive in this sacred place to stop the spread of evil.
 
 \tab When the Traldar broke into the temple, they first came here, unknow- ingly breaking the sacred seals that kept the high priest confined. The other two sarcophagi were of his apprentices, now serving their undead master in \hyperlink{room14}{\textbf{room 14}}.
 
@@ -384,7 +384,7 @@ Three open sarcophagi lie open, their lids scattered on the floor. Half-smashed 
 	\item jackal-headed porcelain figurines with tiny opal eyes (3~×~1200 gp)
 \end{itemize}
 
-(If the opals are gouged out, they will cost 300~gp each, while the figurine's value drops to 400~gp.)
+(If the opals are gouged out, their value will be 300~gp each, while the figurine's value drops to 400~gp.)
 
 
 \hypertarget{room8}{}
@@ -394,7 +394,7 @@ The chamber is empty except for shards of bones scattered over the floor and gna
 
 \tab Loud noises in neighboring rooms (\hyperlink{room5}{\textbf{5}}, \hyperlink{room6}{\textbf{6}}, \hyperlink{room9}{\textbf{9}}) have a 2-in-6 chance (check each combat round) of attracting the ghouls to investigate the disturbance.
 
-\tab A defective \hyperlink{statue}{\textbf{rock/ooze statue}} is suspended by ropes over the entrance to the corridor leading to \hyperlink{room9}{\textbf{room 9}} \dash\ see the \hyperlink{statue-trap}{\textbf{Statue Trap}} section below.
+\tab A defective \hyperlink{statue}{\textbf{rock/ooze statue}} is suspended by ropes over the entrance to the corridor leading to \hyperlink{room9}{\textbf{room 9}}\dash see the \hyperlink{statue-trap}{\textbf{Statue Trap}} section below.
 
 \begin{textbox}
 	\subparagraph{8 ghouls:} AC~6; HD~2*; hp 2×14, 2×9, 12, 10, 2×4; MV~90' (30'); \#AT~2~claws/ 1~bite; D~1d3/1d3/1d3 + paralysis; Save~F2; ML~9; Int~3; AL~C; XP~25; THAC0~18.
@@ -410,7 +410,7 @@ The chamber is empty except for shards of bones scattered over the floor and gna
 
 \tab Loud noises in \hyperlink{room8}{\textbf{room 8}} have a 2-in-6 chance (check each combat round) of attracting the ghouls to investigate the disturbance.
 
-\tab A defective \hyperlink{statue}{\textbf{rock/ooze statue}} is suspended by ropes over the entrance to the corridor leading to \hyperlink{room8}{\textbf{room 8}} \dash\ see the \hyperlink{statue-trap}{\textbf{Statue Trap}} section below.
+\tab A defective \hyperlink{statue}{\textbf{rock/ooze statue}} is suspended by ropes over the entrance to the corridor leading to \hyperlink{room8}{\textbf{room 8}}\dash see the \hyperlink{statue-trap}{\textbf{Statue Trap}} section below.
 
 \skipline
 \paragraph{Treasure}
@@ -444,8 +444,8 @@ A defective \hyperlink{statue}{\textbf{rock/ooze statue}} is suspended by ropes 
 
 \begin{itemize}[leftmargin=*]
 	\item The trap is triggered by the lever in the farthest adjacent corner or by cutting the rope leading to it. Agarats and elder ghouls will surely try to use it against the intruders.
-	\item Anyone standing below the statue must Save vs. Wands or take 2d6 damage from the statue falling over them. Noticing the trap in advance grants a~+4 bonus to this saving throw.
-	\item Those who failed this Save are pinned under until making an open doors check (with a +1 bonus per helper).
+	\item Anyone standing below the statue must \emph{save vs. wands} or take 2d6 damage from the statue falling over them. Noticing the trap in advance grants a~+4 bonus to this saving throw.
+	\item Those who failed this save are pinned under until making an \emph{open doors} check (with a +1 bonus per helper).
 	\item On the next round, \hyperlink{gray-ooze}{\textbf{gray ooze}} starts seeping out of the cracked statue, attacking the closest character.
 \end{itemize}
 
@@ -476,9 +476,9 @@ A defective \hyperlink{statue}{\textbf{rock/ooze statue}} is suspended by ropes 
 \hypertarget{room11}{}
 \section{11. Sealed Burial Chamber}
 
-The seal can be broken by an open doors check with a +1 bonus to the roll.
+The seal can be broken by an \emph{open doors} check with a +1 bonus to the roll.
 
-\tab The whole room is \textbf{trapped}, releas- ing a cloud of rotting gas the moment the door is opened. Everyone standing around must immediately Save vs. Poison or contract a mummy \textbf{disease}: this hide- ous rotting affliction prevents all magical healing and slows normal heal- ing to 10\% of the normal rate. The disease lasts until magically cured.
+\tab The whole room is \textbf{trapped}, releas- ing a cloud of rotting gas the moment the door is opened. Everyone standing around must immediately \emph{save vs. poison} or contract a mummy \textbf{disease}: this hide- ous rotting affliction prevents all magical healing and slows normal heal- ing to 10\% of the normal rate. The disease lasts until magically cured.
 
 {~\\\hfill\em(Continued on the following page)}
 
@@ -492,7 +492,7 @@ The seal can be broken by an open doors check with a +1 bonus to the roll.
 	\item jackal-headed porcelain figurines with tiny opal eyes (6~×~1200 gp)
 \end{itemize}
 
-(If the opals are gouged out, they will cost 300~gp each, while the figurine's value drops to 400~gp.)
+(If the opals are gouged out, their value will be 300~gp each, while the figurine's value drops to 400~gp.)
 
 
 \hypertarget{room12}{}
@@ -505,7 +505,7 @@ The seal can be broken by an open doors check with a +1 bonus to the roll.
 \begin{itemize}[leftmargin=*]
 	\item 11,000 sp and 3,000 pp
 	\item golden star symbols of Pflarr (12~×~1,000 gp)\textsuperscript{1}
-	\item hutaakan tapestries (3 × 350 gp, 2,000 cn each)
+	\item Hutaakan tapestries (3 × 350 gp, 2,000 cn each)
 	\item potions of gaseous form, heroism, and invulnerability
 	\item scroll of illumination
 	\item bronze shield +2
@@ -528,7 +528,7 @@ Additionally, each silver statue, if destroyed, is worth 50 gp in silver.
 \hypertarget{room13}{}
 \section{13. Inner Hall}
 
-The barred door can be broken by an open doors check with a --1 penalty to the roll, alerting the high priest, who will then attempt to ambush the party from behind the curtain.
+The barred door can be broken by an \emph{open doors} check with a --1 penalty to the roll, alerting the high priest, who will then attempt to ambush the party from behind the curtain.
 
 
 \tab Vile visages and symbols of Thana- tos are drawn over the fine mosaics on the walls and floor of this hall with some foul-smelling black substance.
@@ -632,7 +632,7 @@ Slender giant lizards with long spindly legs with toes flattened out to form rou
 \rightbox[\aparskip]{(EX51/RC184)}
 \headerAnimal
 4\tab 3**\tab 120'(40')\tab d6 roll:\tab 1 target:\tab F3\tab 9\tab 12\tab C\tab 65\tab 17
-\\\tabn{3}\textit{1-2:} 1 breath\tab 3d6 (Save vs. Breath for half)
+\\\tabn{3}\textit{1-2:} 1 breath\tab 3d6 (\emph{save vs. breath} for half)
 \\\tabn{3}\textit{3-6:} 1 bite\tabn{1}1d6
 
 Reddish-brown doglike monster as big as a small pony.
@@ -708,7 +708,7 @@ Tawny-furred feline predator.
 2'-long gray rattlesnake.
 \begin{itemize}[leftmargin=*,label=\itshape\textbullet]
 \item
-Anyone bitten must \textbf{Save vs. Poison} or take \textbf{extra 1d4+1 damage}.
+Anyone bitten must \emph{save vs. poison} or take extra 1d4+1 damage.
 \end{itemize}
 
 \setCustomTabPositions{%
@@ -896,7 +896,7 @@ Immune to \textbf{sleep}, \textbf{charm}, and \textbf{hold} spells.
 \item
 \textbf{Turned} as spectres.
 \item
-\textbf{Scream (1/turn):} All within 20' must Save vs. Spells (adjusted by Wisdom) or suffer a temporary 1 level energy drain for 1d4 turns. This effect is cumulative: any creature temporarily drained of all life energy will fall unconscious and cannot be woken for 2d6 turns.
+\textbf{Scream (1/turn):} All within 20' must \emph{save vs. spells} (adjusted by Wisdom) or suffer a temporary 1 level energy drain for 1d4 turns. This effect is cumulative: any creature temporarily drained of all life energy will fall unconscious and cannot be woken for 2d6 turns.
 \end{itemize}
 
 
@@ -915,9 +915,9 @@ Immune to \textbf{sleep}, \textbf{charm}, and \textbf{hold} spells.
 \item
 \textbf{Turned} as wraiths.
 \item
-When attacked, a sphere of eerie green light forms around its head, expanding at a rate of 5'/round ut to a maximum radius of 25'. Anyone in the area must Save vs. Spells (adjusted by Wisdom) or suffer a chilling weakness and a~--2~penalty to their hit and damage rolls.
+When attacked, a sphere of eerie green light forms around its head, expanding at a rate of 5'/round out to a maximum radius of 25'. Anyone in the area must \emph{save vs. spells} (adjusted by Wisdom) or suffer a chilling weakness and a~--2~penalty to their hit and damage rolls.
 \item
-Any hit from an elder ghoul will \textbf{paralyze} any creature of ogre-size or smaller (except elves) for 2d4 turns unless Save vs. Paralysis is made successfully. Once an opponent is paralyzed, the ghoul will target another opponent.
+Any hit from an elder ghoul will \textbf{paralyze} any creature of ogre-size or smaller (except elves) for 2d4 turns unless \emph{save vs. paralysis} is made successfully. Once an opponent is paralyzed, the ghoul will target another opponent.
 \end{itemize}
 
 
@@ -934,7 +934,7 @@ Hideous beastlike creatures who will attack and eat any living thing. They have 
 \item
 Immune to \textbf{sleep} and \textbf{charm} spells.
 \item
-Any hit from a ghoul will \textbf{paralyze} any creature of ogre-size or smaller (except elves) for 2d4 turns unless Save vs. Paralysis is made successfully. Once an opponent is paralyzed, the ghoul will target another opponent.
+Any hit from a ghoul will \textbf{paralyze} any creature of ogre-size or smaller (except elves) for 2d4 turns unless \emph{save vs. paralysis} is made successfully. Once an opponent is paralyzed, the ghoul will target another opponent.
 \end{itemize}
 
 \vfill
@@ -971,7 +971,7 @@ A large flat and translucent amoeba that shimmers with a variety of pale colors.
 	\item
 	When moving to attack, changes to its natural form, writhing forth horribly at half-speed this round, and at full speed once it has metamorphosed.
 	\item
-	Attacks as though its victims have AC~9 (adjusted by magical armor bonuses but not Dexterity). On hit, the victim is immobilized and automatically drained for 1d10 hp/round. Victims who Save vs. Spells take half damage that round.
+	Attacks as though its victims have AC~9 (adjusted by magical armor bonuses but not Dexterity). On hit, the victim is immobilized and automatically drained for 1d10 hp/round. Victims who \emph{save vs. spells} take half damage that round.
 	\item
 	Half of the damage inflicted on a death leech is also suffered by the victim it is currently wrapped around.
 	\item
@@ -994,7 +994,7 @@ A large flat and translucent amoeba that shimmers with a variety of pale colors.
 
 \begin{itemize}[leftmargin=*,label=\itshape\textbullet]
 	\item
-	Everyone seeing a mummy must Save vs. Paralysis or stop, paralyzed with \textbf{fear}, until the mummy is out of sight.
+	Everyone seeing a mummy must \emph{save vs. paralysis} or stop, paralyzed with \textbf{fear}, until the mummy is out of sight.
 	\item
 	Immune to \textbf{sleep}, \textbf{charm}, and \textbf{hold} spells.
 	\item
